# RAG

./: README.md  pyproject.toml  requirements.txt
data/textfiles/: war_news.txt
notebook/: document.ipynb  documentLoader.ipynb
src/: data_loader.py  search.py  vectorstore.py
